--- a/models/openai/models/llm/gpt-4o.yaml
+++ b/models/openai/models/llm/gpt-4o.yaml
@@ -37,6 +37,8 @@ parameter_rules:
     options:
       - text
       - json_object
+  - name: json_schema
+    use_template: json_schema
 pricing:
   input: '5.00'
   output: '15.00'
