--- a/models/jina/provider/jina.yaml
+++ b/models/jina/provider/jina.yaml
@@ -52,11 +52,10 @@ model_credential_schema:
         zh_Hans: 服务器 URL
         en_US: Base URL
       type: text-input
-      required: true
+      required: false
       placeholder:
         zh_Hans: Base URL, e.g. https://api.jina.ai/v1
         en_US: Base URL, e.g. https://api.jina.ai/v1
-      default: 'https://api.jina.ai/v1'
     - variable: context_size
       label:
         zh_Hans: 上下文大小
