--- a/models/openai/models/llm/gpt-4o.yaml
+++ b/models/openai/models/llm/gpt-4o.yaml
@@ -37,6 +37,7 @@ parameter_rules:
     options:
       - text
       - json_object
+      - json_schema
   - name: json_schema
     use_template: json_schema
 pricing:
