--- a/tools/aws/provider/aws_tools.yaml
+++ b/tools/aws/provider/aws_tools.yaml
@@ -1,10 +1,10 @@
 identity:
   author: aws
-  name: aws-tools
+  name: aws_tools
   label:
-    en_US: aws-tools
+    en_US: AWS Tools
     zh_Hans: 亚马逊云科技工具集
-    pt_BR: aws-tools
+    pt_BR: AWS Tools
   description:
     en_US: the tools based on the aws services
     zh_Hans: the tools based on the aws services
@@ -19,12 +19,12 @@ tools:
   - tools/lambda_translate_utils.yaml
   - tools/lambda_yaml_to_json.yaml
   - tools/nova_canvas.yaml
-  - tools/nova_reel.yaml
   - tools/s3_operator.yaml
   - tools/sagemaker_chinese_toxicity_detector.yaml
   - tools/sagemaker_text_rerank.yaml
   - tools/sagemaker_tts.yaml
   - tools/transcribe_asr.yaml
+  - tools/opensearch_knn_search.yaml
 extra:
   python:
-    source: provider/aws-tools.py
+    source: provider/aws_tools.py
