--- a/models/sagemaker/manifest.yaml
+++ b/models/sagemaker/manifest.yaml
@@ -1,29 +1,41 @@
-meta:
-  arch:
-    - amd64
-    - arm64
-  runner:
-    entrypoint: main
-    language: python
-    version: "3.12"
-  version: 0.0.1
-name: sagemaker
+version: 0.0.6
+type: plugin
 author: langgenius
+name: sagemaker
 label:
-  en_US: Sagemaker
-  zh_Hans: Sagemaker
+  en_US: Amazon SageMaker
+  ja_JP: Amazon SageMaker
+  zh_Hans: Amazon SageMaker
+  pt_BR: Amazon SageMaker
 description:
-  en_US: Customized model on Sagemaker
-  zh_Hans: Sagemaker上的私有化部署的模型
-created_at: 2024-09-20T00:13:50.29298939-04:00
+  en_US: Self deployed model provider - Amazon SageMaker
+  ja_JP: Self deployed model provider - Amazon SageMaker
+  zh_Hans: Self deployed model provider - Amazon SageMaker
+  pt_BR: Self deployed model provider - Amazon SageMaker
 icon: icon_s_en.png
-plugins:
-  models:
-    - provider/sagemaker.yaml
 resource:
   memory: 268435456
   permission:
     model:
-      enabled: false
-type: plugin
-version: 0.0.3
+      enabled: true
+      llm: true
+      text_embedding: false
+      rerank: false
+      tts: false
+      speech2text: false
+      moderation: false
+plugins:
+  models:
+    - provider/sagemaker.yaml
+meta:
+  version: 0.0.1
+  arch:
+    - amd64
+    - arm64
+  runner:
+    language: python
+    version: "3.12"
+    entrypoint: main
+created_at: 2025-02-26T11:40:49.732667+08:00
+privacy: PRIVACY.md
+verified: false
