Feat dingtalk message type (#548)
* feat(dingtalk): 支持 Markdown 消息类型并优化工具配置

- 在钉钉群机器人工具中添加了对 Markdown 消息类型的支持
- 更新了工具配置，增加了消息类型选择参数- 调整了 payload构造逻辑，根据消息类型选择合适的格式
- 更新了工具和插件的版本号

* Update requirements.txt

- update dify_plugin==0.0.1b74 on requirements.txt

---------

Co-authored-by: liuhao <liuhao5@junrunrenli.com>

--- a/tools/dingtalk/provider/dingtalk.yaml
+++ b/tools/dingtalk/provider/dingtalk.yaml
@@ -2,7 +2,7 @@ extra:
   python:
     source: provider/dingtalk.py
 identity:
-  author: Bowen Liang
+  author: Bowen Liang & LiuHao
   description:
     en_US: DingTalk group robot
     pt_BR: DingTalk group robot
