--- a/tools/dingtalk/tools/dingtalk_group_bot.yaml
+++ b/tools/dingtalk/tools/dingtalk_group_bot.yaml
@@ -16,40 +16,64 @@ identity:
     zh_Hans: 发送群消息
   name: dingtalk_group_bot
 parameters:
-- form: form
-  human_description:
-    en_US: access_token in the group robot webhook
-    pt_BR: access_token in the group robot webhook
-    zh_Hans: 群自定义机器人webhook中access_token字段的值
-  label:
-    en_US: access token
-    pt_BR: access token
-    zh_Hans: access token
-  name: access_token
-  required: true
-  type: secret-input
-- form: form
-  human_description:
-    en_US: secret key for signing
-    pt_BR: secret key for signing
-    zh_Hans: 加签秘钥
-  label:
-    en_US: secret key for signing
-    pt_BR: secret key for signing
-    zh_Hans: 加签秘钥
-  name: sign_secret
-  required: true
-  type: secret-input
-- form: llm
-  human_description:
-    en_US: Content to sent to the group.
-    pt_BR: Content to sent to the group.
-    zh_Hans: 群消息文本
-  label:
-    en_US: content
-    pt_BR: content
-    zh_Hans: 消息内容
-  llm_description: Content of the message
-  name: content
-  required: true
-  type: string
+  - form: form
+    human_description:
+      en_US: access_token in the group robot webhook
+      pt_BR: access_token in the group robot webhook
+      zh_Hans: 群自定义机器人webhook中access_token字段的值
+    label:
+      en_US: access token
+      pt_BR: access token
+      zh_Hans: access token
+    name: access_token
+    required: true
+    type: secret-input
+  - form: form
+    human_description:
+      en_US: secret key for signing
+      pt_BR: secret key for signing
+      zh_Hans: 加签秘钥
+    label:
+      en_US: secret key for signing
+      pt_BR: secret key for signing
+      zh_Hans: 加签秘钥
+    name: sign_secret
+    required: true
+    type: secret-input
+  - form: llm
+    human_description:
+      en_US: Content to sent to the group.
+      pt_BR: Content to sent to the group.
+      zh_Hans: 群消息文本
+    label:
+      en_US: content
+      pt_BR: content
+      zh_Hans: 消息内容
+    llm_description: Content of the message
+    name: content
+    required: true
+    type: string
+  - default: text
+    form: form
+    human_description:
+      en_US: dingtalk Group bot message type
+      pt_BR: dingtalk Group bot message type
+      zh_Hans: 群机器人webhook的消息类型
+    label:
+      en_US: dingtalk Group bot message type
+      pt_BR: dingtalk Group bot message type
+      zh_Hans: 群机器人webhook的消息类型
+    name: message_type
+    options:
+      - label:
+          en_US: Text
+          pt_BR: Text
+          zh_Hans: 文本
+        value: text
+      - label:
+          en_US: Markdown
+          pt_BR: Markdown
+          zh_Hans: Markdown
+        value: markdown
+    required: true
+    type: select
