fix: typo Maximum Iterations (#561)
* fix: typo Maximum Iterations

* fix: typo tools => tool

--- a/agent-strategies/cot_agent/strategies/ReAct.yaml
+++ b/agent-strategies/cot_agent/strategies/ReAct.yaml
@@ -22,9 +22,9 @@ parameters:
     type: array[tools]
     required: true
     label:
-      en_US: Tools list
+      en_US: Tool list
       zh_Hans: 工具列表
-      pt_BR: Tools list
+      pt_BR: Tool list
   - name: instruction
     type: string
     required: true
@@ -47,9 +47,9 @@ parameters:
     type: number
     required: true
     label:
-      en_US: Maxium Iterations
+      en_US: Maximum Iterations
       zh_Hans: 最大迭代次数
-      pt_BR: Maxium Iterations
+      pt_BR: Maximum Iterations
     default: 3
     min: 1
     max: 30
