Gemini 2.0 Flash support Grounding (#556)
* replace vertexai library into google-cloud-aiplatform

* update version

* replace generationResponse

* fix

* Update requirements.txt

* `style: 不要な空行を削除してコードスタイルを改善`

* `feat: groundingオプションの追加とGoogle GenAIライブラリへの対応`

* fix: 不要なIteratorインポートを削除

* feat: GeminiモデルのGrounding設定をboolean型に変更し、Google検索機能を統合

* Delete models/gemini/file_cache.json

* Update dify_plugin version in requirements.txt

* Revert version to 0.0.7 in manifest

* Remove extra newline in llm.py

* Update requirements for dify_plugin and vertexai

* Updates from editor

* Update Japanese translation in gemini-2.0-flash.yaml

* feat(models): geminiモデルのバージョンを0.0.1から0.1.0に更新

* Update models/gemini/manifest.yaml

---------

Co-authored-by: crazywoola <100913391+crazywoola@users.noreply.github.com>

--- a/models/gemini/models/llm/gemini-2.0-flash.yaml
+++ b/models/gemini/models/llm/gemini-2.0-flash.yaml
@@ -34,6 +34,16 @@ parameter_rules:
     max: 8192
   - name: json_schema
     use_template: json_schema
+  - name: grounding
+    label:
+      en_US: Grounding
+      ja_JP: Grounding
+    type: boolean
+    help:
+      en_US: ensures responses are based on Google Search.
+      ja_JP: Google検索に基づいた応答をします。
+    required: true
+    default: false
 pricing:
   input: '0.00'
   output: '0.00'
