Gemini Model: fix bug & introduce new setting (#588)
* fix files.get calling bug & support local_files_url override for better performance

* update readme to introduce `Local Files URL` setting

* bump 0.1.1

* fix: files.get for cache existed case

* change local_files_url to file_url

* change readme to macth file_url setting

--- a/models/gemini/provider/google.yaml
+++ b/models/gemini/provider/google.yaml
@@ -37,5 +37,13 @@ provider_credential_schema:
     required: true
     type: secret-input
     variable: google_api_key
+  - label:
+      en_US: Files URL
+    placeholder:
+      en_US: Enter the Local FILES URL prefix to get better upload performance
+      zh_Hans: 在此输入本地文件地址的URL前缀
+    required: false
+    type: text-input
+    variable: file_url
 supported_model_types:
 - llm
