--- a/models/tongyi/models/llm/qwen2.5-3b-instruct.yaml
+++ b/models/tongyi/models/llm/qwen2.5-3b-instruct.yaml
@@ -4,7 +4,9 @@ label:
   en_US: qwen2.5-3b-instruct
 model_type: llm
 features:
+  - multi-tool-call
   - agent-thought
+  - stream-tool-call
 model_properties:
   mode: chat
   context_size: 32768
@@ -69,7 +71,7 @@ parameter_rules:
   - name: response_format
     use_template: response_format
 pricing:
-  input: '0.000'
-  output: '0.000'
+  input: '0.0003'
+  output: '0.0009'
   unit: '0.001'
   currency: RMB
