--- a/models/tongyi/models/llm/qwen2.5-72b-instruct.yaml
+++ b/models/tongyi/models/llm/qwen2.5-72b-instruct.yaml
@@ -4,7 +4,9 @@ label:
   en_US: qwen2.5-72b-instruct
 model_type: llm
 features:
+  - multi-tool-call
   - agent-thought
+  - stream-tool-call
 model_properties:
   mode: chat
   context_size: 131072
