--- a/models/siliconflow/models/llm/qwen2.5-vl-7b-Instruct.yaml
+++ b/models/siliconflow/models/llm/qwen2.5-vl-7b-Instruct.yaml
@@ -1,6 +1,6 @@
-model: Qwen/Qwen2-VL-72B-Instruct
+model: Pro/Qwen/Qwen2.5-VL-7B-Instruct
 label:
-  en_US: Qwen/Qwen2-VL-72B-Instruct
+  en_US: Pro/Qwen/Qwen2.5-VL-7B-Instruct
 model_type: llm
 features:
   - vision
@@ -78,8 +78,7 @@ parameter_rules:
       - text
       - json_object
 pricing:
-  input: '4.13'
-  output: '4.13'
+  input: '0.35'
+  output: '0.35'
   unit: '0.000001'
   currency: RMB
-deprecated: true
