--- a/models/siliconflow/models/llm/qwen-qwq-32B.yaml
+++ b/models/siliconflow/models/llm/qwen-qwq-32B.yaml
@@ -1,9 +1,11 @@
-model: meta-llama/Meta-Llama-3.1-405B-Instruct
+model: Qwen/QwQ-32B
 label:
-  en_US: meta-llama/Meta-Llama-3.1-405B-Instruct
+  en_US: Qwen/QwQ-32B
 model_type: llm
 features:
   - agent-thought
+  - tool-call
+  - stream-tool-call
 model_properties:
   mode: chat
   context_size: 32768
@@ -13,9 +15,9 @@ parameter_rules:
   - name: max_tokens
     use_template: max_tokens
     type: int
-    default: 512
+    default: 8192
     min: 1
-    max: 4096
+    max: 32768
     help:
       zh_Hans: 指定生成结果长度的上限。如果生成结果截断，可以调大该参数。
       en_US: Specifies the upper limit on the length of generated results. If the generated results are truncated, you can increase this parameter.
@@ -45,8 +47,8 @@ parameter_rules:
       - text
       - json_object
 pricing:
-  input: '21'
-  output: '21'
+  input: '1'
+  output: '4'
   unit: '0.000001'
   currency: RMB
 deprecated: true
