--- a/models/siliconflow/models/llm/qwen2.5-vl-32b-instruct.yaml
+++ b/models/siliconflow/models/llm/qwen2.5-vl-32b-instruct.yaml
@@ -1,12 +1,12 @@
-model: Qwen/Qwen2-VL-72B-Instruct
+model: Qwen/Qwen2.5-VL-32B-Instruct
 label:
-  en_US: Qwen/Qwen2-VL-72B-Instruct
+  en_US: Qwen/Qwen2.5-VL-32B-Instruct
 model_type: llm
 features:
   - vision
 model_properties:
   mode: chat
-  context_size: 32768
+  context_size: 131072
 parameter_rules:
   - name: temperature
     use_template: temperature
@@ -78,8 +78,7 @@ parameter_rules:
       - text
       - json_object
 pricing:
-  input: '4.13'
-  output: '4.13'
+  input: '1.89'
+  output: '1.89'
   unit: '0.000001'
   currency: RMB
-deprecated: true
