--- a/models/mixedbread/manifest.yaml
+++ b/models/mixedbread/manifest.yaml
@@ -1,35 +1,31 @@
 author: langgenius
-created_at: 2024-10-08T15:50:01.848598-04:00
+created_at: "2024-10-08T19:50:01.848598Z"
+description:
+  en_US: Mixedbread
 icon: icon_s_en.png
 label:
-  en_US: mixedbread
-description:
-  en_US: MixedBread
+  en_US: Mixedbread
 meta:
   arch:
-  - amd64
-  - arm64
+    - amd64
+    - arm64
   runner:
     entrypoint: main
     language: python
-    version: '3.10'
+    version: "3.12"
   version: 0.0.1
 name: mixedbread
 plugins:
   models:
-  - provider/mixedbread.yaml
+    - provider/mixedbread.yaml
 resource:
   memory: 268435456
   permission:
     model:
       enabled: true
-      llm: false
-      moderation: false
       rerank: true
-      speech2text: false
       text_embedding: true
-      tts: false
     tool:
       enabled: true
 type: plugin
-version: 0.0.3
+version: 0.0.4
