--- a/models/mixedbread/provider/mixedbread.yaml
+++ b/models/mixedbread/provider/mixedbread.yaml
@@ -11,16 +11,16 @@ extra:
     provider_source: provider/mixedbread.py
 help:
   title:
-    en_US: Get your API key from MixedBread AI
-    zh_Hans: 从 MixedBread 获取 API Key
+    en_US: Get your API key from Mixedbread AI
+    zh_Hans: 从 Mixedbread 获取 API Key
   url:
-    en_US: https://www.mixedbread.ai/
+    en_US: https://mixedbread.com/
 icon_large:
   en_US: icon_l_en.png
 icon_small:
   en_US: icon_s_en.png
 label:
-  en_US: MixedBread
+  en_US: Mixedbread
 models:
   rerank:
     predefined:
