--- a/models/gitee_ai/models/llm/_position.yaml
+++ b/models/gitee_ai/models/llm/_position.yaml
@@ -4,7 +4,9 @@
 - Qwen2.5-32B-Instruct
 - Qwen2-72B-Instruct
 - Qwen2-VL-72B
+- Qwen2.5-VL-32B-Instruct
 - QwQ-32B
+- Align-DS-V
 - Yi-34B-Chat
 - glm-4-9b-chat
 - deepseek-coder-33B-instruct
