--- a/models/openai/models/llm/_position.yaml
+++ b/models/openai/models/llm/_position.yaml
@@ -7,6 +7,14 @@
 - gpt-4
 - gpt-4o
 - gpt-4o-2024-05-13
+- gpt-4o-2024-08-06
+- gpt-4o-2024-11-20
+- gpt-4.1
+- gpt-4.1-2025-04-14
+- gpt-4.1-mini
+- gpt-4.1-mini-2025-04-14
+- gpt-4.1-nano
+- gpt-4.1-nano-2025-04-14
 - gpt-4-turbo
 - gpt-4-turbo-2024-04-09
 - gpt-4-turbo-preview
