feat & fix: Add new models and update existing configurations for qwen series: (#728)
- Added new models: qwen-max-0125, qwen-plus-0112, qwen-plus-0125, qwen-plus-1125, qwen-plus-1127, and qwen-plus-1220 with detailed parameter rules and pricing.
- Updated qwen-max-latest and qwen-max to have increased context size and adjusted pricing.
- Modified qwen-plus models to change mode from 'completion' to 'chat' and added multi-tool-call and stream-tool-call features.
- Standardized max_tokens default value to 8192 across relevant models.

--- a/models/tongyi/models/llm/_position.yaml
+++ b/models/tongyi/models/llm/_position.yaml
@@ -16,6 +16,7 @@
 - qwen-vl-max-0201
 - qwen-vl-max
 - qwen-max-latest
+- qwen-max-0125
 - qwen-max-1201
 - qwen-max-0919
 - qwen-max-0428
@@ -24,6 +25,11 @@
 - qwen-max
 - qwen-max-longcontext
 - qwen-plus-latest
+- qwen-plus-0125
+- qwen-plus-0112
+- qwen-plus-1220
+- qwen-plus-1127
+- qwen-plus-1125
 - qwen-plus-0919
 - qwen-plus-0806
 - qwen-plus-0723
