--- a/models/tongyi/models/llm/qwen-plus-0919.yaml
+++ b/models/tongyi/models/llm/qwen-plus-0919.yaml
@@ -5,9 +5,11 @@ label:
   en_US: qwen-plus-0919
 model_type: llm
 features:
+  - multi-tool-call
   - agent-thought
+  - stream-tool-call
 model_properties:
-  mode: completion
+  mode: chat
   context_size: 131072
 parameter_rules:
   - name: temperature
