feat: add azure o4-mini and o3 (#739)
* feat: add azure o4-mini and o3

* chore: bump plugin version

--- a/models/azure_openai/provider/azure_openai.yaml
+++ b/models/azure_openai/provider/azure_openai.yaml
@@ -146,6 +146,18 @@ model_credential_schema:
               variable: __model_type
           value: o3-mini
         - label:
+            en_US: o3
+          show_on:
+            - value: llm
+              variable: __model_type
+          value: o3
+        - label:
+            en_US: o4-mini
+          show_on:
+            - value: llm
+              variable: __model_type
+          value: o4-mini
+        - label:
             en_US: o1-mini
           show_on:
             - value: llm
