Plugin/mineru add demo dsl (#753)
* feat(mineru):add MinerU pdf parse tool

* feat(mineru):MinerU version0.0.2:Support the official API of MinerU,remove replace_md_img_path

* feat(mineru):MinerU version0.0.2:Support the official API of MinerU,remove replace_md_img_path

* feat(mineru): update readme

* fix(mineru): Fix the bug that causes images to fail to be displayed.

* fix(mineru): Fix the bug that causes images to fail to be displayed.

* feat(mineru): bump version to 0.0.3

* feat(mineru): add demo dsl

--- a/tools/mineru/provider/mineru.yaml
+++ b/tools/mineru/provider/mineru.yaml
@@ -21,6 +21,7 @@ credentials_for_provider:
       zh_Hans: 请输入你的 MinerU 服务的令牌
     required: false
     type: secret-input
+    url: https://mineru.net/apiManage/token
   server_type:
     label:
       en_US: Server Type
