Plugin/mineru  bump MinerU version to 0.2.0 (#771)
* feat(mineru):add MinerU pdf parse tool

* feat(mineru):MinerU version0.0.2:Support the official API of MinerU,remove replace_md_img_path

* feat(mineru):MinerU version0.0.2:Support the official API of MinerU,remove replace_md_img_path

* feat(mineru): update readme

* fix(mineru): Fix the bug that causes images to fail to be displayed.

* fix(mineru): Fix the bug that causes images to fail to be displayed.

* feat(mineru): bump version to 0.0.3

* feat(mineru): add demo dsl

* feat(mineru):change demo dsl url

* feat(mineru):bump version to 0.1.0

* feat(mineru): update support MinerU version to release 1.3.6,support more input file type

--- a/tools/mineru/manifest.yaml
+++ b/tools/mineru/manifest.yaml
@@ -1,4 +1,4 @@
-version: 0.1.0
+version: 0.2.0
 type: plugin
 author: langgenius
 name: mineru
@@ -7,9 +7,9 @@ label:
   ja_JP: MinerU
   zh_Hans: MinerU
 description:
-  en_US: MinerU is a tool that converts PDFs into machine-readable formats (e.g., markdown, JSON), allowing for easy extraction into any format. MinerU was born during the pre-training process of InternLM. We focus on solving symbol conversion issues in scientific literature and hope to contribute to technological development in the era of large models.https://github.com/opendatalab/MinerU
-  ja_JP: MinerU は、PDF を機械可読な形式（例えば、マークダウン、JSON）に変換するツールで、どんな形式にも簡単に抽出することができます。MinerU は InternLM の事前トレーニングプロセス中に生まれました。私たちは科学文献における記号変換の問題を解決することに集中し、大規模モデルの時代における技術開発に貢献することを目指しています。https://github.com/opendatalab/MinerU
-  zh_Hans: MinerU是一款可以在本地部署的将PDF转化为机器可读格式的工具（如markdown、json），可以很方便地抽取为任意格式。MinerU诞生于书生-浦语的预训练过程中，我们将会集中精力解决科技文献中的符号转化问题，希望在大模型时代为科技发展做出贡献。https://github.com/opendatalab/MinerU
+  en_US: MinerU is a tool that converts FILES into machine-readable formats (e.g., markdown, JSON), allowing for easy extraction into any format. MinerU was born during the pre-training process of InternLM. We focus on solving symbol conversion issues in scientific literature and hope to contribute to technological development in the era of large models.https://github.com/opendatalab/MinerU
+  ja_JP: MinerU は、FILES を機械可読な形式（例えば、マークダウン、JSON）に変換するツールで、どんな形式にも簡単に抽出することができます。MinerU は InternLM の事前トレーニングプロセス中に生まれました。私たちは科学文献における記号変換の問題を解決することに集中し、大規模モデルの時代における技術開発に貢献することを目指しています。https://github.com/opendatalab/MinerU
+  zh_Hans: MinerU是一款可以在本地部署的将FILES转化为机器可读格式的工具（如markdown、json），可以很方便地抽取为任意格式。MinerU诞生于书生-浦语的预训练过程中，我们将会集中精力解决科技文献中的符号转化问题，希望在大模型时代为科技发展做出贡献。https://github.com/opendatalab/MinerU
 icon: icon.svg
 resource:
   memory: 268435456
