--- a/models/volcengine_maas/provider/volcengine_maas.yaml
+++ b/models/volcengine_maas/provider/volcengine_maas.yaml
@@ -111,6 +111,24 @@ model_credential_schema:
       zh_Hans: 基础模型
     options:
     - label:
+        en_US: Doubao-1.5-UI-TARS
+      value: Doubao-1.5-UI-TARS
+      show_on:
+        - variable: __model_type
+          value: llm
+    - label:
+        en_US: Doubao-1.5-vision-lite
+      value: Doubao-1.5-vision-lite
+      show_on:
+        - variable: __model_type
+          value: llm
+    - label:
+        en_US: Doubao-1.5-vision-pro
+      value: Doubao-1.5-vision-pro
+      show_on:
+        - variable: __model_type
+          value: llm
+    - label:
         en_US: Doubao-1.5-thinking-pro
       value: Doubao-1.5-thinking-pro
       show_on:
