--- a/tools/siliconflow/provider/siliconflow.yaml
+++ b/tools/siliconflow/provider/siliconflow.yaml
@@ -28,3 +28,5 @@ tools:
   - tools/flux.yaml
   - tools/stable_diffusion.yaml
   - tools/janus-pro.yaml
+  - tools/image-to-video.yaml
+  - tools/text-to-video.yaml
