--- a/tools/openai/manifest.yaml
+++ b/tools/openai/manifest.yaml
@@ -18,7 +18,7 @@ meta:
     language: python
     version: '3.12'
   version: 0.0.1
-name: openai
+name: openai_tool
 plugins:
   tools:
   - provider/openai.yaml
