--- a/models/siliconflow/models/llm/deepseek-r1-distill-qwen-7B.yaml
+++ b/models/siliconflow/models/llm/deepseek-r1-distill-qwen-7B.yaml
@@ -9,6 +9,12 @@ model_properties:
   mode: chat
   context_size: 32000
 parameter_rules:
+  - name: temperature
+    use_template: temperature
+    default: 0.6
+  - name: top_p
+    use_template: top_p
+    default: 0.95
   - name: max_tokens
     use_template: max_tokens
     min: 1
