chore: update version and dependencies in manifest and requirements (#810)
- Bump version from 0.0.20 to 0.0.21 in manifest.yaml
- Update dify_plugin dependency version in requirements.txt from >=0.1.0,<0.2.0 to >=0.2.0,<0.3.0
- Modify model labels in o4-mini-2025-04-16.yaml to include the full date

--- a/models/openai/models/llm/o4-mini-2025-04-16.yaml
+++ b/models/openai/models/llm/o4-mini-2025-04-16.yaml
@@ -1,7 +1,7 @@
 model: o4-mini-2025-04-16
 label:
-  zh_Hans: o4-mini
-  en_US: o4-mini
+  zh_Hans: o4-mini-2025-04-16
+  en_US: o4-mini-2025-04-16
 model_type: llm
 features:
   - agent-thought
