fix: minimax yaml config (#822)
Co-authored-by: 刘江波 <jiangbo721@163.com>

--- a/models/minimax/provider/minimax.yaml
+++ b/models/minimax/provider/minimax.yaml
@@ -6,6 +6,7 @@ extra:
     model_sources:
     - models/llm/llm.py
     - models/text_embedding/text_embedding.py
+    - models/tts/tts.py
     provider_source: provider/minimax.py
 help:
   title:
@@ -26,6 +27,9 @@ models:
   text_embedding:
     predefined:
     - models/text_embedding/*.yaml
+  tts:
+    predefined:
+    - models/tts/*.yaml
 provider: minimax
 provider_credential_schema:
   credential_form_schemas:
