Gitee AI add new model, fit reasoning_content (#824)
Co-authored-by: 方程 <fangcheng@oschina.cn>

--- a/models/gitee_ai/models/llm/_position.yaml
+++ b/models/gitee_ai/models/llm/_position.yaml
@@ -1,3 +1,8 @@
+- Qwen3-30B-A3B
+- Qwen3-32B
+- Qwen3-8B
+- Qwen3-4B
+- Qwen3-0.6B
 - Qwen2.5-72B-Instruct
 - Qwen2.5-14B-Instruct
 - Qwen2-7B-Instruct
