--- a/models/tongyi/models/llm/qwen-plus-latest.yaml
+++ b/models/tongyi/models/llm/qwen-plus-latest.yaml
@@ -2,7 +2,7 @@
 # please refer to (https://help.aliyun.com/zh/model-studio/getting-started/models#bb0ffee88bwnk)
 model: qwen-plus-latest
 label:
-  en_US: qwen-plus-latest
+  en_US: qwen-plus-latest(Qwen3)
 model_type: llm
 features:
   - multi-tool-call
@@ -24,7 +24,7 @@ parameter_rules:
   - name: max_tokens
     use_template: max_tokens
     type: int
-    default: 8192
+    default: 512
     min: 1
     max: 8192
     help:
@@ -78,10 +78,33 @@ parameter_rules:
     help:
       zh_Hans: 模型内置了互联网搜索服务，该参数控制模型在生成文本时是否参考使用互联网搜索结果。启用互联网搜索，模型会将搜索结果作为文本生成过程中的参考信息，但模型会基于其内部逻辑“自行判断”是否使用互联网搜索结果。
       en_US: The model has a built-in Internet search service. This parameter controls whether the model refers to Internet search results when generating text. When Internet search is enabled, the model will use the search results as reference information in the text generation process, but the model will "judge" whether to use Internet search results based on its internal logic.
+  - name: enable_thinking
+    required: false
+    type: boolean
+    default: false
+    label:
+      zh_Hans: 思考模式
+      en_US: Thinking mode
+    help:
+      zh_Hans: 是否开启思考模式。
+      en_US: Whether to enable thinking mode.
+  - name: thinking_budget
+    required: false
+    type: int
+    default: 2048
+    min: 1
+    max: 8192
+    label:
+      zh_Hans: 思考长度限制
+      en_US: Thinking budget
+    help:
+      zh_Hans: 思考过程的最大长度，只在思考模式为true时生效。
+      en_US: The maximum length of the thinking process, only effective when thinking mode is true.
   - name: response_format
     use_template: response_format
 pricing:
   input: '0.0008'
   output: '0.002'
+#  output_thinking: '0.016'
   unit: '0.001'
   currency: RMB
