--- a/models/tongyi/models/llm/qwen-turbo-2025-04-28.yaml
+++ b/models/tongyi/models/llm/qwen-turbo-2025-04-28.yaml
@@ -1,15 +1,14 @@
-# for more details, please refer to https://help.aliyun.com/zh/model-studio/getting-started/models
-model: qwen3-1.7b
+# this model corresponds to qwen-turbo-latest, for more details
+# please refer to (https://help.aliyun.com/zh/model-studio/getting-started/models#ff492e2c10lub)
+model: qwen-turbo-2025-04-28
 label:
-  en_US: qwen3-1.7b
+  en_US: qwen-turbo-2025-04-28(Qwen3)
 model_type: llm
 features:
-  - multi-tool-call
   - agent-thought
-  - stream-tool-call
 model_properties:
   mode: chat
-  context_size: 32768
+  context_size: 131072
 parameter_rules:
   - name: temperature
     use_template: temperature
@@ -19,7 +18,7 @@ parameter_rules:
     max: 2.0
     help:
       zh_Hans: 用于控制随机性和多样性的程度。具体来说，temperature值控制了生成文本时对每个候选词的概率分布进行平滑的程度。较高的temperature值会降低概率分布的峰值，使得更多的低概率词被选择，生成结果更加多样化；而较低的temperature值则会增强概率分布的峰值，使得高概率词更容易被选择，生成结果更加确定。
-      en_US: Used to control the degree of randomness and diversity. Specifically, the temperature value controls the degree to which the probability distribution of each candidate word is smoothed when generating text. A higher temperature value will reduce the peak value of the probability distribution, allowing more low-probability words to be selected, and the generated results will be more diverse; while a lower temperature value will enhance the peak value of the probability distribution, making it easier for high-probability words to be selected, the generated results are more certain.
+      en_US: Used to control the degree of randomness and diversity. Specifically, the temperature value controls the degree to which the probability distribution of each candidate word is smoothed when generating text. A higher temperature value will reduce the peak value of the probability distribution, allowing more low-probability words to be selected, and the generated results will be more diverse; while a lower temperature value will enhance the peak value of the probability distribution, making it easier for high-probability words to be selected. , the generated results are more certain.
   - name: max_tokens
     use_template: max_tokens
     type: int
@@ -68,10 +67,19 @@ parameter_rules:
     help:
       zh_Hans: 用于控制模型生成时的重复度。提高repetition_penalty时可以降低模型生成的重复度。1.0表示不做惩罚。
       en_US: Used to control the repeatability when generating models. Increasing repetition_penalty can reduce the duplication of model generation. 1.0 means no punishment.
+  - name: enable_search
+    type: boolean
+    default: false
+    label:
+      zh_Hans: 联网搜索
+      en_US: Web Search
+    help:
+      zh_Hans: 模型内置了互联网搜索服务，该参数控制模型在生成文本时是否参考使用互联网搜索结果。启用互联网搜索，模型会将搜索结果作为文本生成过程中的参考信息，但模型会基于其内部逻辑“自行判断”是否使用互联网搜索结果。
+      en_US: The model has a built-in Internet search service. This parameter controls whether the model refers to Internet search results when generating text. When Internet search is enabled, the model will use the search results as reference information in the text generation process, but the model will "judge" whether to use Internet search results based on its internal logic.
   - name: enable_thinking
     required: false
     type: boolean
-    default: true
+    default: false
     label:
       zh_Hans: 思考模式
       en_US: Thinking mode
@@ -94,7 +102,7 @@ parameter_rules:
     use_template: response_format
 pricing:
   input: '0.0003'
-  output: '0.0012'
-#  output_thinking: '0.003'
+  output: '0.0006'
+#  output_thinking: '0.006'
   unit: '0.001'
   currency: RMB
