--- a/models/tongyi/models/llm/qwen3-32b.yaml
+++ b/models/tongyi/models/llm/qwen3-32b.yaml
@@ -2,7 +2,6 @@
 model: qwen3-32b
 label:
   en_US: qwen3-32b
-  zh_Hans: 通义千问3-32B
 model_type: llm
 features:
   - multi-tool-call
@@ -77,25 +76,25 @@ parameter_rules:
       zh_Hans: 思考模式
       en_US: Thinking mode
     help:
-      zh_Hans: 是否开启思考模式，适用于 Qwen3 模型。Qwen3 商业版模型默认值为 False，Qwen3 开源版模型默认值为 True。
-      en_US: Whether to enable thinking mode, applicable to Qwen3 models. The default value for Qwen3 commercial models is False, and the default value for Qwen3 open source models is True.
+      zh_Hans: 是否开启思考模式。
+      en_US: Whether to enable thinking mode.
   - name: thinking_budget
     required: false
     type: int
-    default: 2048
+    default: 512
     min: 1
     max: 8192
     label:
       zh_Hans: 思考长度限制
       en_US: Thinking budget
     help:
-      zh_Hans: 思考过程的最大长度，只在enable_thinking为true时生效。适用于 Qwen3 的商业版与开源版模型。
-      en_US: The maximum length of the thinking process, only effective when enable_thinking is true. Applicable to commercial and open source models of Qwen3.
+      zh_Hans: 思考过程的最大长度，只在思考模式为true时生效。
+      en_US: The maximum length of the thinking process, only effective when thinking mode is true.
   - name: response_format
     use_template: response_format
 pricing:
   input: '0.002'
   output: '0.008'
-  output_thinking: '0.02'
+#  output_thinking: '0.02'
   unit: '0.001'
-  currency: RMB 
+  currency: RMB
