tongyi model label of qvq is incorrect and some chore (#832)
* fix: label of qvq is incorrect

* chore: qwen3 open-source edition 'enable_thinking' default set 'true'

* chore: adjust the position of the model

* release tongyi plugin 0.0.21

--- a/models/tongyi/models/llm/_position.yaml
+++ b/models/tongyi/models/llm/_position.yaml
@@ -1,8 +1,8 @@
-- qwq-32b
-- qwq-plus
+- qvq-max-latest
+- qvq-max
 - qwq-plus-0305
-- qwq-max
-- qwq-max-latest
+- qwq-plus
+- qwq-32b
 - deepseek-r1
 - deepseek-r1-distill-qwen-14b
 - deepseek-r1-distill-qwen-32b
@@ -25,6 +25,7 @@
 - qwen-max
 - qwen-max-longcontext
 - qwen-plus-latest
+- qwen-plus-2025-04-28
 - qwen-plus-0125
 - qwen-plus-0112
 - qwen-plus-1220
@@ -43,11 +44,20 @@
 - qwen-vl-plus-0809
 - qwen-vl-plus
 - qwen-turbo-latest
+- qwen-turbo-2025-04-28
 - qwen-turbo-0919
 - qwen-turbo-0624
 - qwen-turbo-0206
 - qwen-turbo-chat
 - qwen-turbo
+- qwen3-235b-a22b
+- qwen3-30b-a3b
+- qwen3-32b
+- qwen3-14b
+- qwen3-8b
+- qwen3-4b
+- qwen3-1.7b
+- qwen3-0.6b
 - qwen2.5-72b-instruct
 - qwen2.5-32b-instruct
 - qwen2.5-14b-instruct-1m
