--- a/models/tongyi/models/llm/qvq-max.yaml
+++ b/models/tongyi/models/llm/qvq-max.yaml
@@ -1,9 +1,8 @@
 # this model corresponds to qwen-max, for more details
 # please refer to (https://help.aliyun.com/zh/model-studio/getting-started/models#cf6cc4aa2aokf)
-model: qvq-max-latest
+model: qvq-max
 label:
-  en_US: qvq-max-latest
-  zh_Hans: 通义千问QWQ-Max-Latest
+  en_US: qvq-max
 model_type: llm
 features:
   - vision
