--- a/models/tongyi/models/llm/qwen-turbo-latest.yaml
+++ b/models/tongyi/models/llm/qwen-turbo-latest.yaml
@@ -8,7 +8,7 @@ features:
   - agent-thought
 model_properties:
   mode: chat
-  context_size: 131072
+  context_size: 1000000
 parameter_rules:
   - name: temperature
     use_template: temperature
